fix header spacing

--- a/skalene.css
+++ b/skalene.css
@@ -74,6 +74,8 @@
 }
 
 .sk-panel__header {
+  display: flex;
+  gap: 0.5rem;
   margin: -1px -1px 0;
   padding: 0.5rem;
   border: 1px solid var(--primary-shadow);
